--- a/exercicios/desafio-cordel/index.html
+++ b/exercicios/desafio-cordel/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cordel | Milton Neto</title>
+    <title>Cordel | Milton Duarte</title>
     <link rel="stylesheet" href="cordel-estilos.css">
     
 </head>
