--- a/exercicios/desafio-cordel/index.html
+++ b/exercicios/desafio-cordel/index.html
@@ -60,7 +60,7 @@
             </p>
             
             <div id="imglivro">
-                <p id="segundop">
+                <p id="quintop">
                     Tenho saudade das cartas <br>
                     Escritas com a própria mão <br>
                     Mandava no mês de Junho <br>
