--- a/displayGrid.html
+++ b/displayGrid.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="estilo-grid320.css">
     <link rel="stylesheet" href="estilo-grid768.css">
     <link rel="stylesheet" href="estilo-grid820.css">
+    <link rel="stylesheet" href="estilo-grid1280.css">
+    <link rel="stylesheet" href="estilo-grid1440.css">
     
     <title>Display em Grid</title>
 </head>
@@ -17,7 +19,7 @@
         <label for="check" id="container-do-menu">
             <ion-icon name = menu id="icone-do-menu"></ion-icon>
         </label>
-        <img id="logoSite" src="/projetos-html/exercicios/logoFtech/FTechlogo250.png" alt="logo">
+        <a href="displayGrid.html" id="logoSite"><img src="/projetos-html/exercicios/logoFtech/FTechlogo250.png" alt="logo"></a>
         <nav>
             <ul class="links-container" type="none">
                 <li class="links" id="quemSomos">
