--- a/exercicios/siteftech/displayGrid.html
+++ b/exercicios/siteftech/displayGrid.html
@@ -19,7 +19,7 @@
         <label for="check" id="container-do-menu">
             <ion-icon name = menu id="icone-do-menu"></ion-icon>
         </label>
-        <a href="displayGrid.html" id="logoSite"><img src="/logoFtech/FTechlogo250.png alt="logo></a>
+        <a href="displayGrid.html" id="logoSite"><img src="/logoFtech/FTechlogo250.png "alt="logo"></a>
         <nav>
             <ul class="links-container" type="none">
                 <li class="links" id="quemSomos">
