--- a/exercicios/siteftech/index.html
+++ b/exercicios/siteftech/index.html
@@ -19,7 +19,7 @@
         <label for="check" id="container-do-menu">
             <ion-icon name = menu id="icone-do-menu"></ion-icon>
         </label>
-        <a href="displayGrid.html" id="logoSite"><img src="../siteftech/logoFtech/FTechlogo250.png "alt="logo"></a>
+        <a href="index.html" id="logoSite"><img src="logoFtech/FTechlogo250.png"alt="logo"></a>
         <nav>
             <ul class="links-container" type="none">
                 <li class="links" id="quemSomos">
@@ -57,6 +57,17 @@
             <a class="links-sociais" href="https://www.instagram.com/f3rnando_m4rques/" target="_blank"><ion-icon class="sizeIcons" name = logo-instagram></ion-icon></a>
         </nav>
     </nav>
+    <main>
+        <div class="mainContainerPrincipal">
+            <div class="conteudoPrincipal">
+                <p>Serviços em Redes de Computadores</p>
+            </div>
+            <div class="conteudoPrincipal"></div>
+            <div class="conteudoPrincipal"></div>
+            <div class="conteudoPrincipal"></div>
+            
+        </div>
+    </main>
    
    
     <script  type = "module"  src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" ></script> 
